--- a/shooting-pub.html
+++ b/shooting-pub.html
@@ -1,139 +1,54 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shooting Pub - L'Objectif de Gabriel</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shooting Pub - L'Objectif de Gabriel</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="galerie.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header>
-        <nav>
-            <h1>L'Objectif de Gabriel</h1>
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À Propos</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="rdv.html">Prendre RDV</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <nav>
+      <h1>L'Objectif de Gabriel</h1>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="about.html">À Propos</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="rdv.html">Prendre RDV</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section class="hero">
-            <h2>Shooting Pub</h2>
-            <p>Images impactantes pour vos campagnes publicitaires et marketing.</p>
-        </section>
+  <main>
+    <section class="hero">
+      <h2>Shooting Publicitaire</h2>
+      <p>Des visuels percutants pour mettre en valeur vos marques, produits ou projets professionnels.</p>
+    </section>
 
-        <section class="galerie">
-            <h2>Galerie Shooting Pub</h2>
-            <div class="corkboard">
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub1.jpg" alt="Modèle pour campagne publicitaire">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub2.jpg" alt="Produit en shooting professionnel">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub3.jpg" alt="Portrait commercial pour marque">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub4.jpg" alt="Scène publicitaire dynamique">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub5.jpg" alt="Campagne mode shooting">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub6.jpg" alt="Publicité produit lifestyle">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub7.jpg" alt="Portrait corporate pub">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub8.jpg" alt="Shooting e-commerce">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub9.jpg" alt="Campagne digitale">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub10.jpg" alt="Images marketing impactantes">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub11.jpg" alt="Shooting pour réseau social">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub12.jpg" alt="Publicité événementielle">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub13.jpg" alt="Portrait pub professionnel">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub14.jpg" alt="Campagne print">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-pub/shooting-pub15.jpg" alt="Shooting créatif pub">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <!-- Polaroid final grand et visible (solo) -->
-                <div class="polaroid large-empty">
-                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
-                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
-                    <div class="pin"></div>
-                </div>
-            </div>
-            <!-- Bouton devis supprimé -->
-        </section>
-    </main>
+    <section class="galerie">
+      <h2>Galerie Shooting Pub</h2>
 
-    <footer>
-        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
-    </footer>
+      <div class="corkboard">
+        <!-- Polaroid vide stylisé -->
+        <div class="polaroid large-empty">
+          <div class="empty-text">
+            Aucun shooting publicitaire n’est encore disponible pour le moment.<br>
+            <strong>Et si le prochain, c’était le vôtre ?</strong> 📸
+          </div>
+          <a href="contact.html" class="btn small">Organiser un shooting</a>
+          <div class="pin"></div>
+        </div>
+      </div>
+    </section>
+  </main>
 
-    <script src="script.js"></script>
+  <footer>
+    <p>© 2025 L'Objectif de Gabriel - Tous droits réservés.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
