Add logo container to contact page

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,12 @@
 <body>
   <header>
     <nav>
+      <!-- Conteneur logo + titre -->
+    <div class="logo-container">
+      <img src="images/logo1.jpg" alt="Logo L'Objectif de Gabriel" class="logo">
       <h1>L'Objectif de Gabriel</h1>
+    </div>
+    
       <ul>
         <li><a href="index.html">Accueil</a></li>
         <li><a href="about.html">À propos</a></li>
