--- a/index.html
+++ b/index.html
@@ -8,18 +8,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <h1>L'Objectif de Gabriel</h1>
-            <ul>
-                <li><a href="index.html" class="active">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="rdv.html">Prendre RDV</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+  <nav>
+    <!-- Conteneur logo + titre -->
+    <div class="logo-container">
+      <img src="images/logo1.jpg" alt="Logo L'Objectif de Gabriel" class="logo">
+      <h1>L'Objectif de Gabriel</h1>
+    </div>
 
+    <ul>
+      <li><a href="index.html" class="active">Accueil</a></li>
+      <li><a href="about.html">À propos</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="rdv.html">Prendre RDV</a></li>
+    </ul>
+  </nav>
+</header>
     <main>
         <!-- SECTION HERO -->
         <section class="hero">
