--- a/shooting-personnel.html
+++ b/shooting-personnel.html
@@ -11,7 +11,12 @@
 <body>
     <header>
         <nav>
-            <h1>L'Objectif de Gabriel</h1>
+            <!-- Conteneur logo + titre -->
+    <div class="logo-container">
+      <img src="images/logo1.jpg" alt="Logo L'Objectif de Gabriel" class="logo">
+      <h1>L'Objectif de Gabriel</h1>
+    </div>
+    
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="about.html">À Propos</a></li>
