Update HTML for Shooting Pub page

--- a/shooting-personnel.html
+++ b/shooting-personnel.html
@@ -1,145 +1,59 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mariage - L'Objectif de Gabriel</title>
-    <link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="galerie.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Shooting Pub - L'Objectif de Gabriel</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="galerie.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <header>
-        <nav>
+  <header>
+    <nav>
             <!-- Conteneur logo + titre -->
     <div class="logo-container">
       <img src="images/logo1.jpg" alt="Logo L'Objectif de Gabriel" class="logo">
       <h1>L'Objectif de Gabriel</h1>
     </div>
     
-            <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À Propos</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="rdv.html">Prendre RDV</a></li>
-            </ul>
-        </nav>
-    </header>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="about.html">À Propos</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="rdv.html">Prendre RDV</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-        <section class="hero">
-            <h2>Photographie de Mariage</h2>
-            <p>Des clichés émouvants pour votre plus beau jour. De la préparation à la fête, chaque moment compté.</p>
-        </section>
+  <main>
+    <section class="hero">
+      <h2>Shooting Publicitaire</h2>
+      <p>Des visuels percutants pour mettre en valeur vos marques, produits ou projets professionnels.</p>
+    </section>
 
-        <section class="galerie">
-            <h2>Galerie shooting personelle </h2>
-            <div class="corkboard">
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel1.jpg" alt="Couple marié en extérieur">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel2.jpg" alt="Préparation de la mariée">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel3.jpg" alt="Échange d'anneaux">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel4.jpg" alt="Danse des mariés">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel5.jpg" alt="Cérémonie intime">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel6.jpg" alt="Photos de groupe">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel7.jpg" alt="Coucher de soleil mariage">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel8.jpg" alt="Dîner festif">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel9.jpg" alt="Baiser des mariés">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel10.jpg" alt="Décoration florale">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel11.jpg" alt="Mariée seule portrait">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel12.jpg" alt="Marié en costume">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel13.jpg" alt="Fête dansante">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel14.jpg" alt="Détails alliance">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <div class="polaroid">
-                    <div class="photo-frame">
-                        <img src="images/shooting-personnel/shooting-personnel15.jpg" alt="Fin de soirée émouvante">
-                    </div>
-                    <div class="pin"></div>
-                </div>
-                <!-- Polaroid final grand et visible (solo) -->
-                <div class="polaroid large-empty">
-                    <div class="empty-text">Bientôt vos photos ici – Contactez-nous pour immortaliser vos moments uniques ! 📸</div>
-                    <a href="contact.html" class="btn small">Ajouter vos souvenirs</a>
-                    <div class="pin"></div>
-                </div>
-            </div>
-            <!-- Bouton devis supprimé -->
-        </section>
-    </main>
+    <section class="galerie">
+      <h2>Galerie Shooting Pub</h2>
 
-    <footer>
-        <p>&copy; 2023 L'Objectif de Gabriel. Tous droits réservés.</p>
-    </footer>
+      <div class="corkboard">
+        <!-- Polaroid vide stylisé -->
+        <div class="polaroid large-empty">
+          <div class="empty-text">
+            Aucun shooting publicitaire n’est encore disponible pour le moment.<br>
+            <strong>Et si le prochain, c’était le vôtre ?</strong> 📸
+          </div>
+          <a href="contact.html" class="btn small">Organiser un shooting</a>
+          <div class="pin"></div>
+        </div>
+      </div>
+    </section>
+  </main>
 
-    <script src="script.js"></script>
+  <footer>
+    <p>© 2025 L'Objectif de Gabriel - Tous droits réservés.</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
